# code-examples

./: .gitignore  README.md
awk/: log_chaff.awk
c/: test.c
c/environment_args/: env_args.c  get_env  test.c
c/helloworld/: helloworld.c  loopprint
cpp/: loops  loops.cpp
leetcode/: romanToInt.py
python/: hash_not_rdy.py  parse_json_logs.py  recurse_subclasses.py  setup-env.py
python/argparseSubparser/: subparse.py
python/builtinShellCommands/: myshell.py
python/builtinShellCommands/mylib/: cmds.py  utils.py
python/classes/: class_dunders.py  type_hinting.py
python/decorators/: decorators.py
python/generators/: example_learning.py  people_usecase.py
python/grep-py/: grep-py
python/logging/: log.py
python/mathstuff/: interestAndOutput.py
python/portscanner/: tcp_scan.py
python/psutil/: ps.py
python/py-hash/: hash.py
python/pythonPathInterception/: README.md  bad.py  bad_w_cleanup.py  main.py  utils.py
python/recvallPacketLoop/: packetloop.py
python/shellExamples/: colorama.py  termcolor.py
python/shells/builtinShellCommands/: README.md  initShellCmdClass.py  myshell.py  noInitShellCmdClass.py
python/shells/nc_shell/: nc_shell.py
python/shells/psutil/: ps.py
python/shells/shellExamples/: .shell_hist  FullShell.py  ManualShell.py  README.md  colorful.py
python/tools/backdoor/: backdoor.py
python/tools/grep-py/: grep-py
python/tools/nc_shell/: nc_shell.py
python/tools/ps-py/: ps.py
python/tools/pycmds/: README.md  pyproject.toml
python/tools/pycmds/src/pycmds/: grep.py  hash.py  ls.py  nc_shell.py  ps.py  tcp_scan.py
(+7 files in other folders)
